<resources>
    <string name="app_name">Sevie</string>
    <string name="sevie">sevie</string>
    <string name="contacts">Contacts</string>
    <string name="add_store">Add Store</string>
    <string name="add_store_caps">ADD STORE</string>
    <string name="add_contact_caps">ADD CONTACT</string>
    <string name="add_contact_person">Add Contact Person</string>
    <string name="no_contacts">No Contacts</string>
    <string name="company_name">Company Name</string>
    <string name="menu">Menu</string>
    <string name="menu_time_in">@string/time_in</string>
    <string name="menu_time_out">@string/time_out</string>
    <string name="menu_attendance">@string/attendance</string>
    <string name="menu_breaks">Breaks</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_update_master_file">Update Master File</string>
    <string name="menu_send_back_up">Send Back-up Data</string>
    <string name="menu_support">Contact Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log-out</string>
    <string name="menu_locations">Locations</string>
    <string name="employee_name">Unknown Employee</string>
    <string name="employee_no">000-000</string>
    <string name="name">Name</string>
    <string name="name_hint">Type Name</string>
    <string name="to">-</string>
    <string name="designation">Designation</string>
    <string name="mobile">Mobile No.</string>
    <string name="landline">Telephone</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="remarks">Remarks</string>
    <string name="address">Address</string>
    <string name="address_hint">Type Address</string>
    <string name="share_with">Share with:</string>
    <string name="me">Me</string>
    <string name="my_team">My Team</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="attendance">Attendance</string>
    <string name="entries">Entries</string>
    <string name="visits">Visits</string>
    <string name="photos">Photos</string>
    <string name="visit">Visit</string>
    <string name="location">Location</string>
    <string name="total_break">Total Break</string>
    <string name="stores">Stores</string>
    <string name="search">Search</string>
    <string name="notes">Notes</string>
    <string name="notes_placeholder">Tap to add notes…</string>
    <string name="search_entries">Search Entries</string>
    <string name="announcements">Announcements</string>
    <string name="no_announcements_title">No Announcements</string>
    <string name="no_announcements_message">Be notified for the upcoming news/events.</string>
    <string name="no_expense_items_message">Start creating expense by long pressing the\nExpense button on the bottom\nof the screen.</string>
    <string name="no_expense_reports_message">Start creating reports by tapping the\nADD REPORT button on the upper\nright corner of the screen.</string>
    <string name="total_work_hours">Total Work Hours</string>
    <string name="total_net_work_hours">Total Net Work Hours</string>
    <string name="hereby">I hereby declare this information to be true and correct.</string>
    <string name="tab_home">Home</string>
    <string name="tab_photos">@string/photos</string>
    <string name="tab_entries">@string/entries</string>
    <string name="tab_visits">@string/visits</string>
    <string name="tab_inventory">Inventory</string>
    <string-array name="tab_expense">
        <item>Expense Items</item>
        <item>Expense Reports</item>
    </string-array>
    <string name="press_done">To finish, press \"Done\".</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_date">Select Date</string>
    <string name="select_store">Select Store</string>
    <string name="select_range">Select Range</string>
    <string name="summary">Summary</string>
    <string name="add_geo_tag">Add Geo-tag</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="expense">Expense</string>
    <string name="forms">Forms</string>
    <string name="add_form">Add Form</string>
    <string name="add_forms">Add Forms</string>
    <string name="ok_caps">OK</string>
    <string name="no_in_caps">NO IN</string>
    <string name="no_out_caps">NO OUT</string>
    <string name="select_caps">SELECT</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="pending_caps">PENDING</string>
    <string name="add_visit_caps">ADD VISIT</string>
    <string name="add_expense_report">Add Report</string>
    <string name="submitted_caps">SUBMITTED</string>
    <string name="draft_caps">DRAFT</string>
    <string name="new_form_caps">NEW FORM</string>
    <string name="deleted_caps">DELETED</string>
    <string name="inventory_caps">INVENTORY</string>
    <string name="app_forms_caps">APP FORMS</string>
    <string name="today_schedule_caps">TODAY\'S SCHEDULE</string>
    <string name="new_visit_caps">NEW VISIT</string>
    <string name="add_another_visit">Add Another Visit</string>
    <string name="breaks_caps">BREAKS</string>
    <string name="save_caps">SAVE</string>
    <string name="active_caps">ACTIVE</string>
    <string name="add_visit">Add Visit</string>
    <string name="camera">Camera</string>
    <string name="photos_taken">Photos Taken</string>
    <string name="retake">Retake</string>
    <string name="take_photo">Take Photo</string>
    <string name="use_photo">Use Photo</string>
    <string name="you_are_at">You are at</string>
    <string name="click_here">Click Here</string>
    <string name="add_signature">Add Signature</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="clear_all">Clear All</string>
    <string name="get_time">Get Date &amp; Time</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="affix_signature">Please affix your signature below.</string>
    <string name="last_synced">LAST SYNCED:</string>
    <string name="no_photos_title">No Photos</string>
    <string name="no_entries_title">No Entries</string>
    <string name="no_photos_message">View photos captured from your\nvisits and entries.</string>
    <string name="no_entries_message">Manage, edit and submit entries.</string>
    <string name="upgrade_title">Upgrade to Use this Feature</string>
    <string name="upgrade_not_available">This feature is not available on your current subscription.</string>
    <string name="upgrade_contact">To avail this feature, simply upgrade by contacting Tarkie.</string>
    <string name="select_store_caps">SELECT STORE</string>
    <string name="gps_title">Location Services</string>
    <string name="gps_message">Please enable GPS satellites and Google\'s location service to continue.</string>
    <string name="mock_title">Mock Location</string>
    <string name="mock_message">Your mock location is turned on. Please turn it off first to continue using Tarkie.</string>
    <string name="time_unknown_title">Time Unknown</string>
    <string name="time_unknown_message">It seems that your device time has been reset or was not properly shutdown. You are required to validate the server time via Internet/GPS.</string>
    <string name="search_gps_title">No GPS Signal</string>
    <string name="search_gps_message">Searching for GPS Signal. Please try going outside.</string>
    <string name="time_validation_title">Validating Date and Time</string>
    <string name="server_time">Server Time:</string>
    <string name="time_security_title">Date &amp; Time Security</string>
    <string name="time_security_refresh"><u>Refresh Date &amp; Time</u></string>
    <string name="time_security_message">We have detected a discrepancy between server and your device time.</string>
    <string name="time_security_instructions">Please change the device time to \"Server Time\" to continue.</string>
    <string name="permission_title">Permissions Required</string>
    <string name="permission_message">Please enable the required permissions to continue.</string>
    <string name="gps_acquired_title">GPS Acquired</string>
    <string name="gps_acquired_message">GPS has been acquired, do you want to use this coordinates?</string>
    <string name="no_gps_signal_title">No GPS Signal</string>
    <string name="no_gps_signal_message">Unfortunately, your device is still unable to get GPS signal.</string>
    <string name="logout_title">Confirm Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="no_internet_message">Please connect to the internet.</string>
    <string name="no_data_to_sync_message">No data to be synced.</string>
    <string name="break_without_time_in">Please time-in first before taking your break.</string>
    <string name="no_break">You don\'t have available breaks.</string>
    <string name="camera_error_title">Camera Failed</string>
    <string name="camera_error_message">Unable to load camera, please try to restart your device and try again.</string>
    <string name="hour">0h</string>
    <string name="incomplete_title">Incomplete Details</string>
    <string name="incomplete_message">You have incomplete details in this form. Please make sure to fill out all required * fields.</string>
    <string name="discard_entry_title">Discard this entry?</string>
    <string name="discard_entry_message">You will lose your work and you will have to start over.</string>
    <string name="delete_entry_title">Delete this entry?</string>
    <string name="delete_entry_message">Are you sure you want to delete this entry?</string>
    <string name="delete_announcement_title">Delete this announcement?</string>
    <string name="delete_announcement_message">Are you sure you want to delete this announcement?</string>
    <string name="save_expense_items_title">Expense Saved</string>
    <string name="save_expense_items_message">Details for this expense have been saved.</string>
    <string name="delete_expense_items_title">Delete this expense?</string>
    <string name="delete_expense_items_message">Are you sure you want to\ndelete this expense?\n\n</string>
    <string name="save_expense_reports_title">Expense Saved</string>
    <string name="save_expense_reports_message">Details for this expense have been saved.</string>
    <string name="delete_expense_reports_title">Delete this expense report?</string>
    <string name="delete_expense_reports_message">Are you sure you want to\ndelete this expense report?\n\n</string>
    <string name="submit_entry_title">Submit Entry</string>
    <string name="submit_entry_message">Do you want to finalize and submit this entry?</string>
    <string name="unsubmitted_entries_title">Unsubmitted Entries</string>
    <string name="unsubmitted_entries_message">You still have unsubmitted entries, please finalize and submit first.</string>
    <string name="location_acquired">Location Acquired</string>
    <string name="signature_captured">Signature Captured</string>
    <string name="time_captured">Date &amp; Time Captured</string>
    <string name="time_in_required_title">Time-in Required</string>
    <string name="time_in_required_form_message">Please time-in first before creating new entries. To time-in, please tap on Menu or slide to the right and select \'Time-in\'.</string>
    <string name="time_in_required_visit_message">Please time-in first before you check-in.</string>
</resources>