<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:codePan="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/rlHeaderSignature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:layout_alignParentTop="true"
        android:background="@color/header">

        <FrameLayout
            android:id="@+id/flBackSignature"
            android:layout_width="@dimen/header"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="@dimen/eighteen"
                android:layout_height="@dimen/sixteen"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnBackSignature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

        <com.codepan.widget.CodePanLabel
            android:id="@+id/tvTitleSignature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/header"
            android:layout_marginRight="@dimen/header"
            android:layout_toEndOf="@+id/flBackSignature"
            android:layout_toRightOf="@+id/flBackSignature"
            android:gravity="center"
            android:text="@string/add_signature"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen"
            codePan:typeface="@string/proxima_nova_light"/>

    </RelativeLayout>

    <com.codepan.widget.CodePanLabel
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnClearSignature"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/twenty"
        android:gravity="center"
        android:text="@string/affix_signature"
        android:textColor="@color/gray_pri"
        android:textSize="@dimen/seventeen"
        codePan:typeface="@string/proxima_nova_semi_bold"/>

    <com.codepan.widget.CodePanButton
        android:id="@+id/btnClearSignature"
        android:layout_width="@dimen/one_hundred"
        android:layout_height="wrap_content"
        android:layout_above="@+id/svSignature"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:background="@drawable/state_rect_white_rad_three_str_green_pri"
        android:padding="@dimen/nine"
        android:text="@string/clear"
        android:textColor="@color/green_pri"
        android:textSize="@dimen/seventeen"
        codePan:typeface="@string/proxima_nova_light"/>

    <com.codepan.widget.SignatureView
        android:id="@+id/svSignature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signature_height"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/white_pri"/>

    <LinearLayout
        android:id="@+id/llFooterSignature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_qui">

            <com.codepan.widget.CodePanLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen"
                codePan:typeface="@string/proxima_nova_light"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnCancelSignature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_pri">

            <com.codepan.widget.CodePanLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen"
                codePan:typeface="@string/proxima_nova_light"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnSaveSignature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>